[package]
name = "mews"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mews"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
regex = "1"
mews_integrity = { workspace = true } 
prefix_index = { workspace = true }
hdk_time_indexing = { workspace = true }
chrono = "=0.4.24"
