[package]
name = "profiles"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

profiles_integrity = { workspace = true } 
hc_zome_profiles_coordinator = { git = "https://github.com/holochain-open-dev/profiles.git", branch = "for-hdk-v0.2.1-beta-dev.0", module = "hc_zome_profiles_coordinator" }
